fix checkbox icon bug on ie

--- a/less/checkbox.less
+++ b/less/checkbox.less
@@ -8,7 +8,7 @@
     opacity: 0;
     position: absolute;
     z-index: -99999;
-    left: 0;
+    left: -9999px;
     top: 0;
   }
   span {
